k8s/test/e2e/assembly-job2.yaml
# Copyright 2020-2022 Alibaba Group Holding Limited.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: assembly-job2-deployment
  namespace: vineyard-job
spec:
  selector:
    matchLabels:
      app: assembly-job2
  replicas: 1
  template:
    metadata:
      annotations:
        scheduling.k8s.v6d.io/required: assembly-job1
      labels:
        app: assembly-job2
        assembly.v6d.io/enabled: "true"
        # this label represents the vineyardd's name that need to be used
        scheduling.k8s.v6d.io/vineyardd: vineyardd-sample
        scheduling.k8s.v6d.io/job: assembly-job2
    spec:
      schedulerName: vineyard-scheduler
      containers:
        - name: job2
          image: docker.pkg.github.com/v6d-io/v6d/assembly-job2
          imagePullPolicy: IfNotPresent
          # TODO: could we make it more native?
          volumeMounts:
            - mountPath: /var/run
              name: vineyard-sock
      volumes:
        - name: vineyard-sock
          hostPath:
            path: /var/run/vineyard-vineyard-system-vineyardd-sample
