k8s/test/e2e/distributed-assembly-job1.yaml
# Copyright 2020-2022 Alibaba Group Holding Limited.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: distributed-assembly-job1-deployment
  namespace: vineyard-job
spec:
  selector:
    matchLabels:
      app: distributed-assembly-job1
  replicas: 1
  template:
    metadata:
      annotations:
        scheduling.k8s.v6d.io/required: none
      labels:
        app: distributed-assembly-job1
        # this label represents the vineyardd's name that need to be used
        scheduling.k8s.v6d.io/vineyardd: vineyardd-sample
        scheduling.k8s.v6d.io/job: distributed-assembly-job1
    spec:
      # to avoid scheduling to the same node with the job2, we specify a node here
      nodeName: kind-worker
      containers:
        - name: job1
          image: docker.pkg.github.com/v6d-io/v6d/distributed-assembly-job1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /var/run
              name: vineyard-sock
      volumes:
        - name: vineyard-sock
          hostPath:
            path: /var/run/vineyard-vineyard-system-vineyardd-sample
