k8s/test/e2e/serialize-demo.yaml
# Copyright 2020-2022 Alibaba Group Holding Limited.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: serialize-demo-deployment
  # please make the namespace the same as the vineyardd's namespace
  # as the pod should use the vineyardd's pvc and pvc is namespace scoped
  namespace: vineyard-system
spec:
  selector:
    matchLabels:
      app: serialize-demo
  replicas: 1
  template:
    metadata:
      labels:
        app: serialize-demo
        # this label represents the vineyardd's name that need to be used
        scheduling.k8s.v6d.io/vineyardd: vineyardd-sample
        scheduling.k8s.v6d.io/required: none
        scheduling.k8s.v6d.io/job: serialize-demo
    spec:
      schedulerName: vineyard-scheduler
      containers:
      - name: serialize-demo
        image: docker.pkg.github.com/v6d-io/v6d/serialize
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /var/run
          name: vineyard-sock
        - mountPath: /var/vineyard/serialize
          name: serialize-pvc
      volumes:
      - name: vineyard-sock
        hostPath:
          path: /var/run/vineyard-vineyard-system-vineyardd-sample
      - name: serialize-pvc
        persistentVolumeClaim:
          claimName: serialize-path
