k8s/test/e2e/spill-demo.yaml
# Copyright 2020-2022 Alibaba Group Holding Limited.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spill-demo-deployment
  # please make the namespace the same as the vineyardd's namespace
  # as the pod should use the vineyardd's pvc and pvc is namespace scoped
  namespace: vineyard-system
spec:
  selector:
    matchLabels:
      app: spill-demo
  replicas: 1
  template:
    metadata:
      annotations:
        scheduling.k8s.v6d.io/required: none
      labels:
        app: spill-demo
        # this label represents the vineyardd's name that need to be used
        scheduling.k8s.v6d.io/vineyardd: vineyardd-sample
        scheduling.k8s.v6d.io/job: spill-demo
    spec:
      schedulerName: vineyard-scheduler
      containers:
      - name: spill-demo
        image: ghcr.io/v6d-io/v6d/spill
        command: ["spill_test", "/var/run/vineyard.sock"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /var/run
          name: vineyard-sock
        - mountPath: /var/vineyard/spill
          name: spill-pvc
      volumes:
      - name: vineyard-sock
        hostPath:
          path: /var/run/vineyard-vineyard-system-vineyardd-sample
      - name: spill-pvc
        persistentVolumeClaim:
          claimName: spill-path
